2004-12-28  Chris Kelly <ckdake@users.sf.net> 1.5-cvs-b318

	* Fix: Bug 848309, moved JavaScript blur() to prevent
		main window from possibly having focus when a 
		popup window is in the foreground.

2004-12-28  Chris Kelly <ckdake@users.sf.net> 1.5-cvs-b317

	* Fix:  Bug 1079201, resolved JavaScript error

2004-12-20  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b316

	* Change: Remove debug code

2004-12-20  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b315

	* Fix: Voting in view_album.php  was broken (register globals)

	* Fix: HTML 4.01 changes to
		- poll_properties.php (not yet 100% valid)
		- view_album.php
		- poll_results (also added better footer)

	* Fix: Poll result were viewable for everybody. Now only admins or owner can see.

	* Fix: Language init in fresh installations didnt work.
	
2004-12-19  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b314

	* Change: Removed debug code.

2004-12-15  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b313

	* Fix: Delete comments through stats.php didnt work,
	       because comments of different albums are showed and so $gallery->album is not set.
	  - Added Parameter $albumName to viewComments()
	  - Use of viewComments with this parameter in stats.php
	  - This is caught by do_command.php due to layout/commentdraw.inc
	    and $gallery->album is generated.

	* Fix: admintext was not displayed in stats.php

	* New: Public links are now also displayed in stats.php. (RFE by Floridave)

2004-12-15  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b312

	* Fix: view_photo.php produced an error when no printservices is used.
	       Introduced in b311 with the sorting.

2004-12-14  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b311

	* Fix: Remove GALLERY_URL define from Mambo's section of index.php
	  This caused a bad path when displaying the 'unconfigured' error, 
	  and wasn't used anywhere else.

	* Change: Text changes for the service providers list, sort the list

2004-12-14  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b310
