@@ -26,7 +26,7 @@ if (! isset($GALLERY_EMBEDDED_INSIDE)) {
 ?>
           </td>
 <?php if (!$gallery->session->offline && (!isset($gallery->app->rssEnabled) || $gallery->app->rssEnabled == "yes")) { ?>
-          <td style="text-align:right"><a href="<?php echo $gallery->app->photoAlbumURL . "/rss.php"; ?>" style="background-color:#f60; border:2px outset #ffc8a4; color:white; text-decoration:none; font:bold 10px sans-serif; padding:0px 3px 0px 5px; letter-spacing:1;">RSS</a></td> 
+          <td style="text-align:right"><a href="<?php echo $gallery->app->photoAlbumURL . "/rss.php?set_albumName=" . $gallery->session->albumName; ?>" style="background-color:#f60; border:2px outset #ffc8a4; color:white; text-decoration:none; font:bold 10px sans-serif; padding:0px 3px 0px 5px; letter-spacing:1;">RSS</a></td> 
 <?php 
 } // if rssEnabled
 if ($gallery->user->isAdmin() ) { ?>
